--- a/about.html
+++ b/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -24,29 +26,29 @@
     </nav>
   </header>
 
-  <!-- CONTENU DE LA PAGE -->
-  <!-- Bloc de contenu central -->
-    <main class="content-box">
-  <h1>À propos de moi</h1>
-  <p>
-    Je m'appelle <strong>Yoan Sellathurai</strong> et je suis étudiant en <strong>BTS Cybersécurité, Informatique et Réseau</strong>. Actuellement en stage, je m'investis pleinement dans l'apprentissage des compétences techniques et des bonnes pratiques de la sécurité informatique.
-  </p>
+  <!-- CONTENU CENTRAL -->
+  <main class="content-box">
+    <h1>À propos de moi</h1>
 
-  <p>
-    Mon objectif est de développer des compétences solides dans ces domaines afin de pouvoir les appliquer efficacement dans le monde professionnel et contribuer à la protection des systèmes d'information.
-  </p>
+    <p>
+      Je m'appelle <strong>Yoan Sellathurai</strong> et je suis étudiant en <strong>BTS Cybersécurité, Informatique et Réseau</strong>.
+      Actuellement en stage, je m’implique dans l’apprentissage de compétences techniques, de la programmation à la sécurité informatique.
+    </p>
 
-  <p>
-    Ce site a pour vocation de partager mon parcours, mes projets, et mes compétences, tout en continuant à progresser dans cet univers passionnant qu'est la cybersécurité.
-  </p>
-</main>
+    <p>
+      Mon objectif est de maîtriser les outils et méthodes essentiels à la cybersécurité afin de les mettre en œuvre dans un contexte professionnel, et contribuer activement à la protection des infrastructures numériques.
+    </p>
 
-<footer class="footer">
-  © 2025 Portfolio – Yoan Sellathurai
-</footer>
+    <p>
+      Ce site me permet de partager mon <strong>parcours</strong>, mes <strong>projets</strong> ainsi que mes <strong>compétences</strong>, dans une démarche d'amélioration continue et de veille technologique.
+    </p>
+  </main>
 
-
-
+  <!-- PIED DE PAGE -->
+  <footer class="footer">
+    © 2025 Portfolio – Yoan Sellathurai
+  </footer>
 
 </body>
 </html>
+
