--- a/index.html
+++ b/index.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <nav class="menu">
-            <ul>
-                <li class="btn">
-                    <a href="index.html">
-                        <i class="fas fa-house"></i><br>
-                        Home 
-                    </a>
-                </li>
-                <li class="btn">
-                    <a href="about.html">
-                        <i class="fas fa-user"></i><br>
-                        About
-                    </a>
-                </li>
-                <li class="btn">
-                    <a href="projects.html">
-                        <i class="fas fa-laptop-code"></i><br>
-                        Projects
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main class="content-box">
-  <h1>Bienvenue sur mon Portfolio</h1>
-  <p>Découvrez mon parcours, mes projets et mes compétences.</p>
-</main>
+  <header>
+    <nav class="menu">
+      <ul>
+        <li class="btn">
+          <a href="index.html">
+            <i class="fas fa-house"></i><br>
+            Home 
+          </a>
+        </li>
+        <li class="btn">
+          <a href="about.html">
+            <i class="fas fa-user"></i><br>
+            About
+          </a>
+        </li>
+        <li class="btn">
+          <a href="projects.html">
+            <i class="fas fa-laptop-code"></i><br>
+            Projects
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
- <section class="contact-section">
-  <h2>Me Contacter</h2>
-  <p>Email : <a href="mailto:yoansellth@gmail.com">yoansellth@gmail.com</a></p>
-  <p>Téléphone : <a href="tel:+33641380335">+33 6 41 38 03  35</a></p>
- </section>
+  <!-- Bloc de bienvenue -->
+  <main class="content-box">
+    <h1>Bienvenue sur mon Portfolio</h1>
+    <p>Découvrez mon parcours, mes projets et mes compétences.</p>
+  </main>
 
-    <!-- Bloc de contenu central -->
-    <main class="content-box">
-        <h1>ma page</h1>
-        <p>Voir plus loin</p>
-    </main>
-    <footer class="footer">
-  © 2025 Portfolio – Yoan Sellathurai
-</footer>
+  <div class="porfolio-image">
+      <img src="portfolio.htm">
+  </div>
 
+  <!-- Bloc contact -->
+  <section class="contact-section">
+    <h2>Me Contacter</h2>
+    <p>Email : <a href="mailto:yoansellth@gmail.com">yoansellth@gmail.com</a></p>
+    <p>Téléphone : <a href="tel:+33641380335">+33 6 41 38 03 35</a></p>
+  </section>
 
+  <!-- Footer -->
+  <footer class="footer">
+    © 2025 Portfolio – Yoan Sellathurai
+  </footer>
 </body>
 </html>
+
