--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Projects</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -24,45 +26,45 @@
     </nav>
   </header>
 
- <!-- Bloc de contenu central -->
-    <main class="content-box">
-  <h1>Mes projets et parcours</h1>
+  <!-- Bloc de contenu -->
+  <main class="content-box">
+    <h1>Mes projets et parcours</h1>
 
-  <p>
-    Dans le cadre de ma formation en <strong>BTS Cybersécurité, Informatique et Réseau</strong>, j'ai eu l'opportunité de développer et de consolider mes compétences à travers différents projets pratiques et techniques.
-  </p>
+    <p>
+      Dans le cadre de ma formation en <strong>BTS Cybersécurité, Informatique et Réseau</strong>, j'ai eu l'opportunité de développer et de consolider mes compétences à travers différents projets pratiques et techniques.
+    </p>
 
-  <p>
-    J'ai notamment travaillé sur la configuration d'une clé de bootage pour installer des systèmes d'exploitation et dépanner des machines.
-  </p>
+    <p>
+      🔧 Configuration de clés de boot (USB) pour l’installation de systèmes et le dépannage.
+    </p>
 
-  <p>
-    En programmation, j'ai appris les bases du <strong>langage C</strong> ainsi que la création de programmes en <strong>Shell</strong> : fonctions, scripts, automatisation de tâches, etc.
-  </p>
+    <p>
+      💻 Programmation en <strong>C</strong> et <strong>Shell</strong> : scripts automatisés, gestion de processus, création de fonctions.
+    </p>
 
-  <p>
-    J'ai également réalisé du codage sur Arduino aussi bien en simulation qu'en réel, en concevant et câblant des circuits électriques afin de mettre en place des projets concrets et fonctionnels.
-  </p>
+    <p>
+      ⚡ Projets Arduino en simulation et avec des circuits réels : capteurs, LEDs, automatisation de tâches.
+    </p>
 
-  <p>
-    Tous ces projets m'ont permis d'acquérir des compétences solides et de mieux comprendre les enjeux techniques de la cybersécurité, de l'administration réseau et de la programmation.
-  </p>
-</main>
+    <p>
+      Grâce à ces projets, j’ai développé des compétences concrètes en cybersécurité, administration système, réseaux et programmation embarquée.
+    </p>
+  </main>
 
-<section class="cv-section">
-  <h2>Mon CV</h2>
-  <p>
-    Vous pouvez consulter mon CV pour découvrir plus en détail mon parcours et mes compétences professionnelles.
-  </p>
-  <a href="Yoan Sellathurai CV 3.2 (4).pdf" target="_blank" class="cv-button">Voir mon CV</a>
-</section>
+  <!-- Section CV -->
+  <section class="cv-section">
+    <h2>Mon CV</h2>
+    <p>
+      Vous pouvez consulter mon CV pour en savoir plus sur mon parcours et mes compétences.
+    </p>
+    <a href="Yoan Sellathurai CV 3.2 (4).pdf" target="_blank" class="cv-button">Voir mon CV</a>
+  </section>
 
-
-    
+  <!-- Pied de page -->
   <footer class="footer">
-  © 2025 Portfolio – Yoan Sellathurai
-</footer>
-
+    © 2025 Portfolio – Yoan Sellathurai
+  </footer>
 
 </body>
 </html>
+
