--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </main>
 
   <div class="porfolio-image">
-      <img src="portfolio.htm">
+      <img src="portfolio.webp">
   </div>
 
   <!-- Bloc contact -->
