--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   <main class="content-box">
     <h1>Bienvenue sur mon Portfolio</h1>
     <p>Découvrez mon parcours, mes projets et mes compétences.</p>
+  <img src="portfolio.webp" alt="Illustration Portfolio" class="img-portfolio">
+</main>
+
   </main>
 
-  <div class="porfolio-image">
-      <img src="portfolio.webp">
-  </div>
 
   <!-- Bloc contact -->
   <section class="contact-section">
